Debug BEM methodology

--- a/lesson_11/index.html
+++ b/lesson_11/index.html
@@ -100,10 +100,8 @@
                                         </a>
                                     </div>
                                     <div class="slider__control">
-                                        <button
-                                            class="slider__control slider__control--prev"></button>
-                                        <button
-                                            class="slider__control slider__control--next"></button>
+                                        <button class="slider__control--prev"></button>
+                                        <button class="slider__control--next"></button>
                                     </div>
                                 </div>
                                 <div class="left-about__image">
@@ -118,7 +116,7 @@
                                     </a>
                                 </div>
                             </div>
-                            <div class="about__right right-about">
+                            <div class="about-product__right right-about">
                                 <div class="right-about__navbar navbar">
                                     <ul class="navbar__list">
                                         <li class="navbar__item">Shop</li>
@@ -244,50 +242,53 @@
                             </div>
                         </div>
                         <div class="layout__description description">
-                            <div
-                                class="description__content content-description"></div>
-                            <h2 class="content-description__title">
-                                Product Description
-                            </h2>
-                            <div class="content-description__tab tab">
-                                <div class="tab__item">Description</div>
-                                <div class="tab__item">User comments</div>
-                                <div class="tab__item">Question & Answer</div>
-                            </div>
-                            <div class="content-description__text text">
-                                <p>
-                                    100% Bio-washed Cotton – makes the fabric
-                                    extra soft & silky. Flexible ribbed crew
-                                    neck. Precisely stitched with no pilling &
-                                    no fading. Provide all-time comfort.
-                                    Anytime, anywhere. Infinite range of
-                                    matte-finish HD prints.
-                                </p>
-                            </div>
-                            <div class="content-description__table table">
-                                <div class="table__cell">
-                                    <p>Fabric</p>
-                                    <p>Bio-washed Cotton</p>
+                            <div class="description__content content-description">
+                                <h2 class="content-description__title">
+                                    Product Description
+                                </h2>
+                                <div class="content-description__tab tab">
+                                    <div class="tab__item">Description</div>
+                                    <div class="tab__item">User comments</div>
+                                    <div class="tab__item">
+                                        Question & Answer
+                                    </div>
                                 </div>
-                                <div class="table__cell">
-                                    <p>Pattern</p>
-                                    <p>Printed</p>
+                                <div class="content-description__text text">
+                                    <p>
+                                        100% Bio-washed Cotton – makes the
+                                        fabric extra soft & silky. Flexible
+                                        ribbed crew neck. Precisely stitched
+                                        with no pilling & no fading. Provide
+                                        all-time comfort. Anytime, anywhere.
+                                        Infinite range of matte-finish HD
+                                        prints.
+                                    </p>
                                 </div>
-                                <div class="table__cell">
-                                    <p>Fit</p>
-                                    <p>Regular-fit</p>
-                                </div>
-                                <div class="table__cell">
-                                    <p>Neck</p>
-                                    <p>Round Neck</p>
-                                </div>
-                                <div class="table__cell">
-                                    <p>Sleeve</p>
-                                    <p>Half-sleeves</p>
-                                </div>
-                                <div class="table__cell">
-                                    <p>Style</p>
-                                    <p>Casual Wear</p>
+                                <div class="content-description__table table">
+                                    <div class="table__cell">
+                                        <p>Fabric</p>
+                                        <p>Bio-washed Cotton</p>
+                                    </div>
+                                    <div class="table__cell">
+                                        <p>Pattern</p>
+                                        <p>Printed</p>
+                                    </div>
+                                    <div class="table__cell">
+                                        <p>Fit</p>
+                                        <p>Regular-fit</p>
+                                    </div>
+                                    <div class="table__cell">
+                                        <p>Neck</p>
+                                        <p>Round Neck</p>
+                                    </div>
+                                    <div class="table__cell">
+                                        <p>Sleeve</p>
+                                        <p>Half-sleeves</p>
+                                    </div>
+                                    <div class="table__cell">
+                                        <p>Style</p>
+                                        <p>Casual Wear</p>
+                                    </div>
                                 </div>
                             </div>
                             <div class="description__video video-description">
@@ -301,124 +302,124 @@
                         <div class="layout__similar similar">
                             <h2 class="similar__title">Similar Products</h2>
                             <div class="similar__products products">
-                                <div class="products__item item-product">
-                                    <div class="item-product__info">
+                                <div class="products__items item-product">
+                                    <div class="item-product__info info-product">
                                         <span></span>
                                         <img
                                             src="img/main/about/similar/item-1.webp"
                                             alt="Image">
-                                        <h4 class="item-product__name">
+                                        <h4 class="info-product__name">
                                             White T-Shirt
                                         </h4>
-                                        <div class="item-product__brand">
+                                        <div class="info-product__brand">
                                             Priya’s Brand
                                         </div>
-                                        <div class="item-product__price price">
+                                        <div class="info-product__price price">
                                             $13.00
                                         </div>
                                     </div>
-                                    <div class="item-product__info">
+                                    <div class="item-product__info info-product">
                                         <span></span>
                                         <img
                                             src="img/main/about/similar/item-2.webp"
                                             alt="Image">
-                                        <h4 class="item-product__name">
+                                        <h4 class="info-product__name">
                                             Dark Green Sweatshirt....
                                         </h4>
-                                        <div class="item-product__brand">
+                                        <div class="info-product__brand">
                                             Roboto’s Brand
                                         </div>
-                                        <div class="item-product__price price">
+                                        <div class="info-product__price price">
                                             $127.00
                                         </div>
                                     </div>
-                                    <div class="item-product__info">
+                                    <div class="item-product__info info-product">
                                         <span></span>
                                         <img
                                             src="img/main/about/similar/item-3.webp"
                                             alt="Image">
-                                        <h4 class="item-product__name">
+                                        <h4 class="info-product__name">
                                             Levender Sweatshirt ....
                                         </h4>
-                                        <div class="item-product__brand">
+                                        <div class="info-product__brand">
                                             Jhanvi’s Brand
                                         </div>
-                                        <div class="item-product__price price">
+                                        <div class="info-product__price price">
                                             $133.00
                                         </div>
                                     </div>
-                                    <div class="item-product__info">
+                                    <div class="item-product__info info-product">
                                         <span></span>
                                         <img
                                             src="img/main/about/similar/item-4.webp"
                                             alt="Image">
-                                        <h4 class="item-product__name">
+                                        <h4 class="info-product__name">
                                             Urban jacket with white ....
                                         </h4>
-                                        <div class="item-product__brand">
+                                        <div class="info-product__brand">
                                             Sagar’s Brand
                                         </div>
-                                        <div class="item-product__price price">
+                                        <div class="info-product__price price">
                                             $79.00
                                         </div>
                                     </div>
-                                    <div class="item-product__info">
+                                    <div class="item-product__info info-product">
                                         <span></span>
                                         <img
                                             src="img/main/about/similar/item-5.webp"
                                             alt="Image">
-                                        <h4 class="item-product__name">
+                                        <h4 class="info-product__name">
                                             Plain White T-Shirt
                                         </h4>
-                                        <div class="item-product__brand">
+                                        <div class="info-product__brand">
                                             Jhanvi’s Brand
                                         </div>
-                                        <div class="item-product__price price">
+                                        <div class="info-product__price price">
                                             $123.00
                                         </div>
                                     </div>
-                                    <div class="item-product__info">
+                                    <div class="item-product__info info-product">
                                         <span></span>
                                         <img
                                             src="img/main/about/similar/item-6.webp"
                                             alt="Image">
-                                        <h4 class="item-product__name">
+                                        <h4 class="info-product__name">
                                             Checks Shirt with white.....
                                         </h4>
-                                        <div class="item-product__brand">
+                                        <div class="info-product__brand">
                                             H.M’s Brand
                                         </div>
-                                        <div class="item-product__price price">
+                                        <div class="info-product__price price">
                                             $123.00
                                         </div>
                                     </div>
-                                    <div class="item-product__info">
+                                    <div class="item-product__info info-product">
                                         <span></span>
                                         <img
                                             src="img/main/about/similar/item-7.webp"
                                             alt="Image">
-                                        <h4 class="item-product__name">
+                                        <h4 class="info-product__name">
                                             One piece black top & ....
                                         </h4>
-                                        <div class="item-product__brand">
+                                        <div class="info-product__brand">
                                             Nike’s Brand
                                         </div>
-                                        <div class="item-product__price price">
+                                        <div class="info-product__price price">
                                             $123.00
                                         </div>
                                     </div>
-                                    <div class="item-product__info">
+                                    <div class="item-product__info info-product">
                                         <span></span>
                                         <img
                                             src="img/main/about/similar/item-8.webp"
                                             alt="Image">
-                                        <h4 class="item-product__name">
+                                        <h4 class="info-product__name">
                                             Denim Blue Shirt
                                         </h4>
-                                        <div class="item-product__brand">
+                                        <div class="info-product__brand">
                                             MOMO’s Brand
                                         </div>
-                                        <div class="item-product__price price">
+                                        <div class="info-product__price price">
                                             $38.00
                                         </div>
                                     </div>
