--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -1,27 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/style.css" />
+        <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
         <title>lesson 13</title>
     </head>
     <body>
         <div class="wraper">
             <header class="header">
                 <div class="header__container">
-                    
+                    <!-- можна зробити посхалки, типу текст схований, але при hover будуть зʼявлятиь декілька літер, та якщо проводити далі - сформується фраза -->
+
                 </div>
             </header>
             <main class="main">
                 <div class="main__container">
 
+                    <div class="blocks block">
+                        <div class="block__shadow">
+                            <div class="block__item block__item--translate">
+                                <p>Translate</p>
+                            </div>
+                        </div>
+                        <div class="block__shadow">
+                            <div class="block__item block__item--scale">
+                                <p>Scale</p>
+                            </div>
+                        </div>
+                        <div class="block__shadow">
+                            <div class="block__item block__item--rotate">
+                                <p>Rotate</p>
+                            </div>
+                        </div>
+                        <div class="block__shadow">
+                            <div class="block__item block__item--skew">
+                                <p>Skew</p>
+                            </div>
+                        </div>
+                        <div class="block__shadow">
+                            <div class="block__item block__item--origin">
+                                <p>Transorm-origin</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blocks-3d block-3d">
+                        <div class="block-3d__shadow">
+                            <div class="block-3d__item block-3d__item--rotate">
+                                <p>Rotate-3d</p>
+                            </div>
+                        </div>
+                        <div class="block-3d__shadow">
+                            <div
+                                class="block-3d__item block-3d__item--preserve">
+                                <p>Preserve</p>
+                            </div>
+                        </div>
+                        <div class="block-3d__shadow flip">
+                            <div class="flip__body">
+                                <div class="flip__front">
+                                    <p>Front</p>
+                                </div>
+                                <div class="flip__back">
+                                    <p>Back</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="car">
+                        <div class="car__body"></div>
+                        <div class="car__glass"></div>
+                        <div class="car__wheels wheel">
+                            <div class=" wheel__rubber"></div>
+                            <div class=" wheel__disk"></div>
+                            <div class=" wheel__disk--bolt"></div>
+                            <div class=" wheel__disk-elements element-disk">
+                                <div class="element-disk__item"></div>
+                                <div class="element-disk__item"></div>
+                                <div class="element-disk__item"></div>
+                                <div class="element-disk__item"></div>
+                                <div class="element-disk__item"></div>
+                                <div class="element-disk__item"></div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </main>
-            <footer class="footer">
-
-            </footer>
+            <footer class="footer"></footer>
         </div>
     </body>
 </html>
