--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -84,8 +84,9 @@
                                 <div class="element-disk__item"></div>
                             </div>
                         </div>
-
+                        <div class="car__glass"></div>
                     </div>
+                    
                 </div>
             </main>
             <footer class="footer"></footer>
