--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -12,12 +12,10 @@
             <header class="header">
                 <div class="header__container">
                     <!-- можна зробити посхалки, типу текст схований, але при hover будуть зʼявлятиь декілька літер, та якщо проводити далі - сформується фраза -->
-
                 </div>
             </header>
             <main class="main">
                 <div class="main__container">
-
                     <div class="blocks block">
                         <div class="block__shadow">
                             <div class="block__item block__item--translate">
@@ -72,21 +70,24 @@
                         <div class="car__body"></div>
                         <div class="car__glass"></div>
                         <div class="car__wheels wheel">
-                            <div class=" wheel__rubber"></div>
-                            <div class=" wheel__disk"></div>
-                            <div class=" wheel__disk--bolt"></div>
-                            <div class=" wheel__disk-elements element-disk">
-                                <div class="element-disk__item"></div>
-                                <div class="element-disk__item"></div>
-                                <div class="element-disk__item"></div>
-                                <div class="element-disk__item"></div>
-                                <div class="element-disk__item"></div>
-                                <div class="element-disk__item"></div>
+                            <div class="wheel__rubber">
+                                <div class="wheel__disk">
+                                    <div
+                                        class="wheel__disk--elements element-disk">
+                                        <div class="element-disk__item"></div>
+                                        <div class="element-disk__item"></div>
+                                        <div class="element-disk__item"></div>
+                                        <div class="element-disk__item"></div>
+                                        <div class="element-disk__item"></div>
+                                        <div class="element-disk__item"></div>
+                                    </div>
+                                </div>
                             </div>
+
+                            <div class="wheel__disk--bolt"></div>
                         </div>
                         <div class="car__glass"></div>
                     </div>
-                    
                 </div>
             </main>
             <footer class="footer"></footer>
