--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -80,13 +80,19 @@
                                         <div class="element-disk__item"></div>
                                         <div class="element-disk__item"></div>
                                         <div class="element-disk__item"></div>
+                                        <div class="element-disk__item"></div>
+                                        <div class="element-disk__item"></div>
                                     </div>
                                 </div>
                             </div>
 
                             <div class="wheel__disk--bolt"></div>
                         </div>
-                        <div class="car__glass"></div>
+
+                        <div class="car__details details">
+                            <div class="details__glass"></div>
+                            <div class="details__door"></div>
+                        </div>
                     </div>
                 </div>
             </main>
