--- a/lesson_13/index.html
+++ b/lesson_13/index.html
@@ -70,6 +70,7 @@
                         <div class="car__body"></div>
                         <div class="car__glass"></div>
                         <div class="car__wheels wheel">
+
                             <div class="wheel__rubber">
                                 <div class="wheel__disk">
                                     <div
@@ -92,7 +93,11 @@
                         <div class="car__details details">
                             <div class="details__glass"></div>
                             <div class="details__door"></div>
+                            <div class="details__lights"></div>
+                            
                         </div>
+                        <div class="car__white-bg"></div>
+                        <div class="car__rudder"></div>
                     </div>
                 </div>
             </main>
