--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -50,11 +50,144 @@
                 </div>
             </header>
             <main class="main">
-                <div class="main__container"></div>
+                <div class="main__container">
+                    <h1 class="sticky-categories">Categories For Men</h1>
+                    <div class="categories">
+                        <div class="categories__cart cart">
+                            <div class="cart__container-image">
+                                <div class="cart__image">
+                                    <img
+                                        src="img/main/carts/image-1.webp"
+                                        alt="Image" />
+                                </div>
+                            </div>
+                            <div class="cart__info">
+                                <div class="cart__name">Shirts</div>
+                                <div class="cart__text">Explore Now!</div>
+                            </div>
+                        </div>
+                        <div class="categories__cart cart">
+                            <div class="cart__container-image">
+                                <div class="cart__image">
+                                    <img
+                                        src="img/main/carts/image-2.webp"
+                                        alt="Image" />
+                                </div>
+                            </div>
+                            <div class="cart__info">
+                                <div class="cart__name">Shirts</div>
+                                <div class="cart__text">Explore Now!</div>
+                            </div>
+                        </div>
+                        <div class="categories__cart cart">
+                            <div class="cart__container-image">
+                                <div class="cart__image">
+                                    <img
+                                        src="img/main/carts/image-3.webp"
+                                        alt="Image" />
+                                </div>
+                            </div>
+                            <div class="cart__info">
+                                <div class="cart__name">Shirts</div>
+                                <div class="cart__text">Explore Now!</div>
+                            </div>
+                        </div>
+                        <div class="categories__cart cart">
+                            <div class="cart__container-image">
+                                <div class="cart__image">
+                                    <img
+                                        src="img/main/carts/image-4.webp"
+                                        alt="Image" />
+                                </div>
+                            </div>
+                            <div class="cart__info">
+                                <div class="cart__name">Shirts</div>
+                                <div class="cart__text">Explore Now!</div>
+                            </div>
+                        </div>
+                        <div class="categories__cart cart">
+                            <div class="cart__container-image">
+                                <div class="cart__image">
+                                    <img
+                                        src="img/main/carts/image-5.webp"
+                                        alt="Image" />
+                                </div>
+                            </div>
+                            <div class="cart__info">
+                                <div class="cart__name">Shirts</div>
+                                <div class="cart__text">Explore Now!</div>
+                            </div>
+                        </div>
+                        <div class="categories__cart cart">
+                            <div class="cart__container-image">
+                                <div class="cart__image">
+                                    <img
+                                        src="img/main/carts/image-6.webp"
+                                        alt="Image" />
+                                </div>
+                            </div>
+                            <div class="cart__info">
+                                <div class="cart__name">Shirts</div>
+                                <div class="cart__text">Explore Now!</div>
+                            </div>
+                        </div>
+                        <div class="categories__cart cart">
+                            <div class="cart__container-image">
+                                <div class="cart__image">
+                                    <img
+                                        src="img/main/carts/image-7.webp"
+                                        alt="Image" />
+                                </div>
+                            </div>
+                            <div class="cart__info">
+                                <div class="cart__name">Shirts</div>
+                                <div class="cart__text">Explore Now!</div>
+                            </div>
+                        </div>
+                        <div class="categories__cart cart">
+                            <div class="cart__container-image">
+                                <div class="cart__image">
+                                    <img
+                                        src="img/main/carts/image-8.webp"
+                                        alt="Image" />
+                                </div>
+                            </div>
+                            <div class="cart__info">
+                                <div class="cart__name">Shirts</div>
+                                <div class="cart__text">Explore Now!</div>
+                            </div>
+                        </div>
+                    </div>
+                    <h2 class="sticky-wishlist">Wishlist</h2>
+                    <div class="wishlist">
+                        <div class="wishlist__cart cart-wishlist">
+                            <div class="cart-wishlist__image">
+                                <img
+                                    src="img/main/carts/image-1.webp"
+                                    alt="Image" />
+                            </div>
+                            <div class="cart-wishlist__info">
+                                <h4 class="cart-wishlist__title">
+                                    Blue Flower Print Crop Top
+                                </h4>
+                                <div class="cart-wishlist__color">
+                                    Color:
+                                    <span>Yellow</span>
+                                </div>
+                                <div class="cart-wishlist__quantit">
+                                    Quantity:
+                                    <span>1</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <h2 class="sticky-orders">My Orders</h2>
+                    <div class="orders"></div>
+                </div>
             </main>
             <footer class="footer"></footer>
         </div>
-        
+
         <script src="js/btn.js"></script>
     </body>
 </html>
