added wishlist block

--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="header__search search">
                         <div class="search__image">
-                            <img src="img/icons/search.svg" alt="" />
+                            <img src="img/icons/search.svg" alt="Search" />
                         </div>
                         <input
                             type="text"
@@ -42,7 +42,7 @@
                         </a>
                         <a
                             href="#"
-                            class="button button--border"
+                            class="button button--purple button--border"
                             id="borderButton">
                             Sign Up
                         </a>
@@ -158,26 +158,111 @@
                             </div>
                         </div>
                     </div>
+
                     <h2 class="sticky-wishlist">Wishlist</h2>
                     <div class="wishlist">
                         <div class="wishlist__cart cart-wishlist">
-                            <div class="cart-wishlist__image">
-                                <img
-                                    src="img/main/carts/image-1.webp"
-                                    alt="Image" />
-                            </div>
                             <div class="cart-wishlist__info">
-                                <h4 class="cart-wishlist__title">
-                                    Blue Flower Print Crop Top
-                                </h4>
-                                <div class="cart-wishlist__color">
-                                    Color:
-                                    <span>Yellow</span>
+                                <div class="cart-wishlist__image">
+                                    <img
+                                        src="img/main/wishlist/wishlist-1.webp"
+                                        alt="Image" />
                                 </div>
-                                <div class="cart-wishlist__quantit">
-                                    Quantity:
-                                    <span>1</span>
+                                <div class="cart-wishlist__details">
+                                    <h4 class="cart-wishlist__title">
+                                        Blue Flower Print Crop Top
+                                    </h4>
+                                    <div class="cart-wishlist__color">
+                                        Color:
+                                        <span>Yellow</span>
+                                    </div>
+                                    <div class="cart-wishlist__quantit">
+                                        Quantity:
+                                        <span>1</span>
+                                    </div>
                                 </div>
+                            </div>
+                            <div class="cart-wishlist__buy">
+                                <div class="cart-wishlist__price">$29.00</div>
+                                <button class="cart-wishlist__price button button--purple active" id="purpleButton" type="button">Add to cart</button>
+                            </div>
+                        </div>
+                        <div class="wishlist__cart cart-wishlist">
+                            <div class="cart-wishlist__info">
+                                <div class="cart-wishlist__image">
+                                    <img
+                                        src="img/main/wishlist/wishlist-2.webp"
+                                        alt="Image" />
+                                </div>
+                                <div class="cart-wishlist__details">
+                                    <h4 class="cart-wishlist__title">
+                                        Blue Flower Print Crop Top
+                                    </h4>
+                                    <div class="cart-wishlist__color">
+                                        Color:
+                                        <span>Yellow</span>
+                                    </div>
+                                    <div class="cart-wishlist__quantit">
+                                        Quantity:
+                                        <span>1</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cart-wishlist__buy">
+                                <div class="cart-wishlist__price">$29.00</div>
+                                <button class="cart-wishlist__price button button--purple active"  type="button">Add to cart</button>
+                            </div>
+                        </div>
+                        <div class="wishlist__cart cart-wishlist">
+                            <div class="cart-wishlist__info">
+                                <div class="cart-wishlist__image">
+                                    <img
+                                        src="img/main/wishlist/wishlist-3.webp"
+                                        alt="Image" />
+                                </div>
+                                <div class="cart-wishlist__details">
+                                    <h4 class="cart-wishlist__title">
+                                        Blue Flower Print Crop Top
+                                    </h4>
+                                    <div class="cart-wishlist__color">
+                                        Color:
+                                        <span>Yellow</span>
+                                    </div>
+                                    <div class="cart-wishlist__quantit">
+                                        Quantity:
+                                        <span>1</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cart-wishlist__buy">
+                                <div class="cart-wishlist__price">$29.00</div>
+                                <button class="cart-wishlist__price button button--purple active"  type="button">Add to cart</button>
+                            </div>
+                        </div>
+                        <div class="wishlist__cart cart-wishlist">
+                            <div class="cart-wishlist__info">
+                                <div class="cart-wishlist__image">
+                                    <img
+                                        src="img/main/wishlist/wishlist-4.webp"
+                                        alt="Image" />
+                                </div>
+                                <div class="cart-wishlist__details">
+                                    <h4 class="cart-wishlist__title">
+                                        Blue Flower Print Crop Top
+                                    </h4>
+                                    <div class="cart-wishlist__color">
+                                        Color:
+                                        <span>Yellow</span>
+                                    </div>
+                                    <div class="cart-wishlist__quantit">
+                                        Quantity:
+                                        <span>1</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="cart-wishlist__buy">
+                                <div class="cart-wishlist__price">$29.00</div>
+                                <button class="cart-wishlist__price button button--purple active" type="button">Add to cart</button>
                             </div>
                         </div>
                     </div>
