--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -160,7 +160,9 @@
                     </div>
 
                     <h2 class="sticky-wishlist">Wishlist</h2>
-                    <div class="wishlist">
+                </div>
+                <div class="wishlist">
+                    <div class="wishlist__wraper">
                         <div class="wishlist__cart cart-wishlist">
                             <div class="cart-wishlist__info">
                                 <div class="cart-wishlist__image">
@@ -184,9 +186,16 @@
                             </div>
                             <div class="cart-wishlist__buy">
                                 <div class="cart-wishlist__price">$29.00</div>
-                                <button class="cart-wishlist__price button button--purple active" id="purpleButton" type="button">Add to cart</button>
+                                <button
+                                    class="cart-wishlist__btn button button--purple active"
+                                    id="purpleButton"
+                                    type="button">
+                                    Add to cart
+                                </button>
                             </div>
                         </div>
+                    </div>
+                    <div class="wishlist__wraper">
                         <div class="wishlist__cart cart-wishlist">
                             <div class="cart-wishlist__info">
                                 <div class="cart-wishlist__image">
@@ -210,9 +219,15 @@
                             </div>
                             <div class="cart-wishlist__buy">
                                 <div class="cart-wishlist__price">$29.00</div>
-                                <button class="cart-wishlist__price button button--purple active"  type="button">Add to cart</button>
+                                <button
+                                    class="cart-wishlist__btn button button--purple active"
+                                    type="button">
+                                    Add to cart
+                                </button>
                             </div>
                         </div>
+                    </div>
+                    <div class="wishlist__wraper">
                         <div class="wishlist__cart cart-wishlist">
                             <div class="cart-wishlist__info">
                                 <div class="cart-wishlist__image">
@@ -236,9 +251,15 @@
                             </div>
                             <div class="cart-wishlist__buy">
                                 <div class="cart-wishlist__price">$29.00</div>
-                                <button class="cart-wishlist__price button button--purple active"  type="button">Add to cart</button>
+                                <button
+                                    class="cart-wishlist__btn button button--purple active"
+                                    type="button">
+                                    Add to cart
+                                </button>
                             </div>
                         </div>
+                    </div>
+                    <div class="wishlist__wraper">
                         <div class="wishlist__cart cart-wishlist">
                             <div class="cart-wishlist__info">
                                 <div class="cart-wishlist__image">
@@ -262,13 +283,17 @@
                             </div>
                             <div class="cart-wishlist__buy">
                                 <div class="cart-wishlist__price">$29.00</div>
-                                <button class="cart-wishlist__price button button--purple active" type="button">Add to cart</button>
+                                <button
+                                    class="cart-wishlist__btn button button--purple active"
+                                    type="button">
+                                    Add to cart
+                                </button>
                             </div>
                         </div>
                     </div>
-                    <h2 class="sticky-orders">My Orders</h2>
-                    <div class="orders"></div>
                 </div>
+                <h2 class="sticky-orders">My Orders</h2>
+                <div class="orders"></div>
             </main>
             <footer class="footer"></footer>
         </div>
