--- a/lesson_15/index.html
+++ b/lesson_15/index.html
@@ -158,9 +158,8 @@
                             </div>
                         </div>
                     </div>
-
-                    <h2 class="sticky-wishlist">Wishlist</h2>
                 </div>
+                <h2 class="sticky-wishlist">Wishlist</h2>
                 <div class="wishlist">
                     <div class="wishlist__wraper">
                         <div class="wishlist__cart cart-wishlist">
@@ -218,7 +217,7 @@
                                 </div>
                             </div>
                             <div class="cart-wishlist__buy">
-                                <div class="cart-wishlist__price">$29.00</div>
+                                <div class="cart-wishlist__price">$78.00</div>
                                 <button
                                     class="cart-wishlist__btn button button--purple active"
                                     type="button">
@@ -250,7 +249,7 @@
                                 </div>
                             </div>
                             <div class="cart-wishlist__buy">
-                                <div class="cart-wishlist__price">$29.00</div>
+                                <div class="cart-wishlist__price">$134.00</div>
                                 <button
                                     class="cart-wishlist__btn button button--purple active"
                                     type="button">
@@ -282,7 +281,7 @@
                                 </div>
                             </div>
                             <div class="cart-wishlist__buy">
-                                <div class="cart-wishlist__price">$29.00</div>
+                                <div class="cart-wishlist__price">$93.00</div>
                                 <button
                                     class="cart-wishlist__btn button button--purple active"
                                     type="button">
@@ -292,8 +291,188 @@
                         </div>
                     </div>
                 </div>
-                <h2 class="sticky-orders">My Orders</h2>
-                <div class="orders"></div>
+                <div class="main__container">
+                    <h2 class="sticky-orders">My Orders</h2>
+                    <div class="orders">
+                        <div class="orders__item item-order">
+                            <div class="item-order__info info-order">
+                                <div class="info-order__no">
+                                    Order no: #123456789
+                                </div>
+                                <div class="info-order__wraper">
+                                    <div class="info-order__shipping shipping">
+                                        <div class="shipping__data">
+                                            Order Date :
+                                            <span>2 June 2023 2:40 PM</span>
+                                        </div>
+                                        <div class="shipping__delivery">
+                                            Estimated Delivery Date :
+                                            <span>8 June 2023</span>
+                                        </div>
+                                    </div>
+                                    <div class="info-order__process process">
+                                        <div class="process__status">
+                                            Order Status :
+                                            <span>Inprogress</span>
+                                        </div>
+                                        <div class="process__payment">
+                                            Payment Method :
+                                            <span>Cash on delivery</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-order__unit unit">
+                                <div class="unit__info">
+                                    <div class="unit__image">
+                                        <img
+                                            src="img/main/order/order-1.webp"
+                                            alt="Image" />
+                                    </div>
+                                    <div class="unit__waper-details">
+                                        <h4 class="unit__title">
+                                            Black Printed T-shirt
+                                        </h4>
+                                        <div class="unit__details">
+                                            <div class="unit__color">
+                                                Color:
+                                                <span>Pink</span>
+                                            </div>
+                                            <div class="unit__quantit">
+                                                Qty:
+                                                <span>1</span>
+                                            </div>
+                                            <div class="unit__price">
+                                                Total : $23.00
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button type="button" class="unit__btn button button--purple active">
+                                    View Detail
+                                </button>
+                            </div>
+                        </div>
+                        <div class="orders__item item-order">
+                            <div class="item-order__info info-order">
+                                <div class="info-order__no">
+                                    Order no: #123456789
+                                </div>
+                                <div class="info-order__wraper">
+                                    <div class="info-order__shipping shipping">
+                                        <div class="shipping__data">
+                                            Order Date :
+                                            <span>2 June 2023 2:40 PM</span>
+                                        </div>
+                                        <div class="shipping__delivery">
+                                            Estimated Delivery Date :
+                                            <span>8 June 2023</span>
+                                        </div>
+                                    </div>
+                                    <div class="info-order__process process">
+                                        <div class="process__status">
+                                            Order Status :
+                                            <span>Inprogress</span>
+                                        </div>
+                                        <div class="process__payment">
+                                            Payment Method :
+                                            <span>Cash on delivery</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-order__unit unit">
+                                <div class="unit__info">
+                                    <div class="unit__image">
+                                        <img
+                                            src="img/main/order/order-2.webp"
+                                            alt="Image" />
+                                    </div>
+                                    <div class="unit__waper-details">
+                                        <h4 class="unit__title">
+                                            Black Printed T-shirt
+                                        </h4>
+                                        <div class="unit__details">
+                                            <div class="unit__color">
+                                                Color:
+                                                <span>Pink</span>
+                                            </div>
+                                            <div class="unit__quantit">
+                                                Qty:
+                                                <span>1</span>
+                                            </div>
+                                            <div class="unit__price">
+                                                Total : $93.00
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button type="button" class="unit__btn button button--purple active">
+                                    View Detail
+                                </button>
+                            </div>
+                        </div>
+                        <div class="orders__item item-order">
+                            <div class="item-order__info info-order">
+                                <div class="info-order__no">
+                                    Order no: #123456789
+                                </div>
+                                <div class="info-order__wraper">
+                                    <div class="info-order__shipping shipping">
+                                        <div class="shipping__data">
+                                            Order Date :
+                                            <span>2 June 2023 2:40 PM</span>
+                                        </div>
+                                        <div class="shipping__delivery">
+                                            Estimated Delivery Date :
+                                            <span>8 June 2023</span>
+                                        </div>
+                                    </div>
+                                    <div class="info-order__process process">
+                                        <div class="process__status">
+                                            Order Status :
+                                            <span>Inprogress</span>
+                                        </div>
+                                        <div class="process__payment">
+                                            Payment Method :
+                                            <span>Cash on delivery</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="item-order__unit unit">
+                                <div class="unit__info">
+                                    <div class="unit__image">
+                                        <img
+                                            src="img/main/order/order-3.webp"
+                                            alt="Image" />
+                                    </div>
+                                    <div class="unit__waper-details">
+                                        <h4 class="unit__title">
+                                            Black Printed T-shirt
+                                        </h4>
+                                        <div class="unit__details">
+                                            <div class="unit__color">
+                                                Color:
+                                                <span>Pink</span>
+                                            </div>
+                                            <div class="unit__quantit">
+                                                Qty:
+                                                <span>1</span>
+                                            </div>
+                                            <div class="unit__price">
+                                                Total : $143.00
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button type="button" class="unit__btn button button--purple active">
+                                    View Detail
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </main>
             <footer class="footer"></footer>
         </div>
