--- a/lesson_16/index.html
+++ b/lesson_16/index.html
@@ -23,35 +23,66 @@
                             class="white-collar__form form-white"
                             method="GET"
                             action="#">
-                            <div class="form-white__personal-data">
-                                <input
-                                    required
-                                    class="form-white__name"
-                                    type="text"
-                                    placeholder="Your Name" />
-                                <input
-                                    required
-                                    class="form-white__email"
-                                    type="email"
-                                    placeholder="Email Address" />
+                            <div class="form-white__wraper">
+                                <div
+                                    class="form-white__personal-data form-white__personal-data--name">
+                                    <input
+                                        required
+                                        class="form-white__name"
+                                        type="text"
+                                        id="name" />
+                                    <label
+                                        class="form-white__label form-white__label--name"
+                                        for="name">
+                                        Your Name
+                                    </label>
+                                </div>
+
+                                <div
+                                    class="form-white__personal-data form-white__personal-data--email">
+                                    <input
+                                        required
+                                        class="form-white__email"
+                                        type="email"
+                                        id="email" />
+                                    <label
+                                        class="form-white__label form-white__label--email"
+                                        for="email">
+                                        Email Address
+                                    </label>
+                                </div>
                             </div>
-                            <div class="form-white__info">
-                                <input
-                                    required
-                                    class="form-white__phone"
-                                    type="tel"
-                                    placeholder="Phone Number"
-                                    pattern="[0-9]{10}"
-                                    title="Please enter a valid 10-digit phone number." />
-                                <input
-                                    class="form-white__subject"
-                                    type="text"
-                                    placeholder="Subject" />
+                            <!-- ========= ========= ========= ========= -->
+                            <div class="form-white__wraper">
+                                <div
+                                    class="form-white__personal-data form-white__personal-data--phone">
+                                    <input
+                                        required
+                                        class="form-white__phone"
+                                        type="tel"
+                                        id="phone" />
+                                    <label
+                                        class="form-white__label form-white__label--phone"
+                                        for="phone">
+                                        Phone Number
+                                    </label>
+                                </div>
+
+                                <div
+                                    class="form-white__personal-data form-white__personal-data--subject">
+                                    <input
+                                        class="form-white__subject"
+                                        type="text"
+                                        id="subject" />
+                                    <label
+                                        class="form-white__label form-white__label--subject"
+                                        for="subject">
+                                        Subject
+                                    </label>
+                                </div>
                             </div>
                             <div class="form-white__wraper-message">
-                                <textarea
-                                    class="form-white__message"
-                                    placeholder="Message..."></textarea>
+                                <textarea class="form-white__message"></textarea>
                             </div>
                             <button class="form-white__btn" type="submit">
                                 Submit
